# autobots-fastapi-class

./: README.md
autobots-todo-fastapi/: README.md  pyproject.toml  sql_app.db
autobots-todo-fastapi/app/: crud.py  main.py  models.py  schemas.py
autobots-todo-fastapi/tests/: conftest.py  test_app.py
challenges/todos_challenge/: pyproject.toml  requests_todo_challenge.md
challenges/todos_challenge/tests/: test_todos.py
challenges/todos_challenge/todos/: create_todo.py  delete_todo.py  read_todos.py  update_todo.py  utility.py
challenges/utils_challenge/: main.py  utils_challenge.md
challenges/utils_challenge/reqs/: req_playground.py
challenges/utils_challenge/tests/: test_math_utils.py  test_requests.py  test_string_utils.py
challenges/utils_challenge/utils/: math_utils.py  string_utils.py
python_playground/: doc.txt  main.py
python_playground/tests/: test_todos.py
python_playground_session1/: doc.txt
python_playground_session1/tests/: test_math_utils.py
python_playground_session1/utils/: math_utils.py
python_playground_session2/: pyproject.toml
python_playground_wasync/: async_say.py  async_tasks.py  awaitables.py  awaitables_tasks.py
typing_playground/funcs/: any.py  collable.py  complex_signatures.py  generics.py  new_type_example.py  normal_vs_structural.py  random_stuff.py
