[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kilishek <mentalclear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.23"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
